[package]
name = "json"
version = "0.11.14"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>", "Alec Embke <aembke@gmail.com>"]
description = "JSON implementation in Rust"
repository = "https://github.com/azuqua/json-rust"
license = "MIT/Apache-2.0"

[dependencies]
indexmap = "1.0"
lazy_static = "1.3.0"
